[gd_scene load_steps=6 format=2]

[ext_resource path="res://Script/GameArea.gd" type="Script" id=1]
[ext_resource path="res://ui/HealthUi.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Nexus.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/Inventory.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 542.295 )

[node name="GameArea" type="Node2D"]
script = ExtResource( 1 )

[node name="destroy" type="Area2D" parent="."]

[node name="destroy" type="CollisionShape2D" parent="destroy"]
light_mask = 3
position = Vector2( 2301.43, 540 )
shape = SubResource( 1 )

[node name="Spwarners" type="Node2D" parent="."]

[node name="Position2D0" type="Position2D" parent="Spwarners"]
position = Vector2( 1960, 90 )

[node name="Position2D1" type="Position2D" parent="Spwarners"]
position = Vector2( 1938.27, 290 )

[node name="Position2D2" type="Position2D" parent="Spwarners"]
position = Vector2( 1960, 480 )

[node name="Position2D3" type="Position2D" parent="Spwarners"]
position = Vector2( 1960, 670 )

[node name="Position2D4" type="Position2D" parent="Spwarners"]
position = Vector2( 1960, 865 )

[node name="TextureRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="TextureRect"]
points = PoolVector2Array( 0, 190, 1920, 190 )
width = 5.0
default_color = Color( 0.98, 0.9408, 0.392, 0.980392 )
antialiased = true

[node name="Line2D2" type="Line2D" parent="TextureRect"]
points = PoolVector2Array( 0, 380, 1920, 380 )
width = 5.0
default_color = Color( 0.98, 0.9408, 0.392, 0.980392 )
antialiased = true

[node name="Line2D3" type="Line2D" parent="TextureRect"]
points = PoolVector2Array( 0, 760, 1920, 760 )
width = 5.0
default_color = Color( 0.98, 0.9408, 0.392, 0.980392 )
antialiased = true

[node name="Line2D4" type="Line2D" parent="TextureRect"]
points = PoolVector2Array( 0, 950, 1920, 950 )
width = 5.0
default_color = Color( 0.98, 0.9408, 0.392, 0.980392 )
antialiased = true

[node name="Line2D5" type="Line2D" parent="TextureRect"]
points = PoolVector2Array( 0, 570, 1920, 570 )
width = 5.0
default_color = Color( 0.98, 0.9408, 0.392, 0.980392 )
antialiased = true

[node name="Area2D" type="Area2D" parent="."]

[node name="end" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 210, 540 )
shape = SubResource( 1 )

[node name="Nexus" type="Node2D" parent="."]

[node name="Nexus" parent="Nexus" instance=ExtResource( 3 )]
position = Vector2( 1.02594, 97.7978 )

[node name="Nexus2" parent="Nexus" instance=ExtResource( 3 )]
position = Vector2( 5.01585, 287.342 )

[node name="Nexus3" parent="Nexus" instance=ExtResource( 3 )]
position = Vector2( 6.30292, 471.952 )

[node name="Nexus4" parent="Nexus" instance=ExtResource( 3 )]
position = Vector2( 5.91684, 670.8 )

[node name="Nexus5" parent="Nexus" instance=ExtResource( 3 )]
position = Vector2( 5.10814, 855.249 )

[node name="ennemy" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="HealthUi" parent="." instance=ExtResource( 2 )]
margin_left = 205.334
margin_top = 963.673
margin_right = 205.334
margin_bottom = 963.673

[node name="Inventory" parent="." instance=ExtResource( 5 )]
margin_left = 31.3027
margin_top = 907.351
margin_right = 31.3027
margin_bottom = 1113.35
[connection signal="body_entered" from="destroy" to="." method="_on_destroy_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Nexus/Nexus/Timer" to="Nexus/Nexus" method="_on_Timer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[editable path="Nexus/Nexus"]
